Formulario editar completo y footer corregido

--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -39,7 +39,7 @@
         @RenderBody()
     </main>
 
-    <footer class="page-footer font-small bg-secondary pt-4">
+    <footer id="footer" class="page-footer font-small bg-secondary pt-4">
         <div class="container text-center text-md-left">
 
             <!-- Social buttons -->
