--- a/Views/Shared/More_Layout/_WithoutC.cshtml
+++ b/Views/Shared/More_Layout/_WithoutC.cshtml
@@ -46,7 +46,7 @@
     </main>
     <!-- Footer -->
     <!-- Footer -->
-    <footer class="page-footer font-small bg-secondary pt-4">
+    <footer id="footer" class="page-footer font-small bg-secondary pt-4">
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left">
