--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -87,12 +87,12 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    line-height: 40px;
+  
 }
 #navsec {
     border-color: transparent;
