corregido css footer

--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/2a7e8c7373.js" crossorigin="anonymous"></script>
     <meta name="Description" content="Sitio web hecho, como modulo de quejas y urgencias para funcionar en conjunto junto a otros modulos de un hospital.">
 </head>
-<body style="margin-bottom: 0px;">
+<body id="bodycss">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
