--- a/Views/Shared/More_Layout/_WithoutC.cshtml
+++ b/Views/Shared/More_Layout/_WithoutC.cshtml
@@ -11,7 +11,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <meta name="Description" content="Sitio web hecho, como modulo de quejas y urgencias para funcionar en conjunto junto a otros modulos de un hospital.">
 </head>
-<body style="margin-bottom: 0px;">
+<body id="bodycss">
     <header>
         <nav id="navsec" class="navbar navbar-light navbar-expand-lg fixed-top">
             <div class="container">
