--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -27,13 +27,26 @@ a {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  font-size: 14px;
+
+
+@media (min-width: 1200px) {
+    html {
+        font-size: 16px;
+     }
+    .containerlogin {
+        max-width: 1140px;
+        max-height: 700px;
+    }
+    
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+@media (min-width: 1024px) {
+    html {
+        font-size: 16px;
+    }
+    .containerlogin {
+        max-width: 1140px;
+        max-height: 700px;
+    }
 }
 
 .border-top {
@@ -54,9 +67,9 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+
+#footer {
+    line-height: 20px;
 }
 .masthead {
     background-image:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('/../images/bannerdoctor.jpg');
@@ -83,15 +96,8 @@ html {
     padding: 250px 0 150px;
     color: black;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-#footer {
-   
-    line-height: 30px;
-  
-}
+
+
 #navsec {
     border-color: transparent;
     background-color:white;
@@ -102,6 +108,7 @@ body {
 }
 .containerlogin {
     width: 100%;
+    height:100%;
     padding-right: .75rem;
     padding-left: .75rem;
     margin-right: auto;
