--- a/Views/Admin/Login.cshtml
+++ b/Views/Admin/Login.cshtml
@@ -6,7 +6,7 @@
     string errores = ViewBag.error;
 }
 @model UsuarioModel
-<section>
+<section id="seccionlogin">
     <div class="containerlogin">
         <div class="row justify-content-center">
             <div class="col-md-9 col-lg-12 col-xl-10">
