--- a/Views/Admin/Sugerencias.cshtml
+++ b/Views/Admin/Sugerencias.cshtml
@@ -2,6 +2,7 @@
     List<SugerenciaModel> sugerencias = ViewBag.sugerencias;
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
 }
+<section  id="seccionlogin">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
 <table class="table table-bordered" id="Sugerencias">
     <thead class="thead-dark">
@@ -43,6 +44,7 @@
         }
     </tbody>
 </table>
+    </section>
 @section scripts{
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
     <script>
