--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 <div>
-    <section class="masthead">
+    <section  id="seccionlogin" class="masthead">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
                 <div class="textositio">
