--- a/Views/QuejaSugerencia/AgregarSugerencia.cshtml
+++ b/Views/QuejaSugerencia/AgregarSugerencia.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<section class="jumbotron">
+<section  id="seccionlogin" class="jumbotron">
     <h1 class="display-4">Mandar una sugerencia</h1>
     @using (Html.BeginForm("addSugerencia", "QuejaSugerencia", FormMethod.Post))
     {
