--- a/Views/QuejaSugerencia/Menu.cshtml
+++ b/Views/QuejaSugerencia/Menu.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-<section class="container jumbotron">
+<section  id="seccionlogin" class="container jumbotron">
     <div class="row">
         <div class="col d-flex">
             <a asp-controller="QuejaSugerencia" asp-action="Queja" class="btn alert-dark btn-lg btn-block">Queja</a>
