--- a/Views/Urgencias/Editar.cshtml
+++ b/Views/Urgencias/Editar.cshtml
@@ -12,7 +12,7 @@
 }
 @model UrgenciaModel
 
-<section>
+<section  id="seccionlogin">
     @using (Html.BeginForm("Update", "Urgencias", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
