--- a/Views/Urgencias/VerCitaPaciente.cshtml
+++ b/Views/Urgencias/VerCitaPaciente.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     UrgenciaModel urgencia = ViewBag.urgencia;
 }
-    <section class="jumbotron justify-content-md-end">
+    <section  id="seccionlogin" class="jumbotron justify-content-md-end">
         <table class="table table-responsive-lg jumbotron-fluid">
             <thead>
                 <tr>
