--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Nosotros";
 }
 <section>
-    <div class="container h-100">
+    <div  id="seccionlogin" class="container h-100">
         <div class="row h-100">
             <div class="col-lg-7 my-auto textonosotros">
                 <div class="mx-auto header-content">
