--- a/Views/QuejaSugerencia/AgregarQueja.cshtml
+++ b/Views/QuejaSugerencia/AgregarQueja.cshtml
@@ -5,7 +5,7 @@
     string Errores = ViewBag.errores;
 }
 @model QuejaModel
-<section class="jumbotron">
+<section  id="seccionlogin" class="jumbotron">
     <h1 class="display-4">Formulario Quejas</h1>
     @if (Errores != null)
     {
