--- a/Views/QuejaSugerencia/VerQ.cshtml
+++ b/Views/QuejaSugerencia/VerQ.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     string estado = queja.Estado == 1 ? "No validada" : "Validada";
 }
-<section class="jumbotron container-fluid">
+<section  id="seccionlogin" class="jumbotron container-fluid">
     <div class="form-group row">
         <label class="col-sm-4 col-form-label" for="Id">@Html.DisplayNameFor(model => queja.Id)</label>
         <div class="col">
