--- a/Views/QuejaSugerencia/VerS.cshtml
+++ b/Views/QuejaSugerencia/VerS.cshtml
@@ -7,7 +7,7 @@
     string estado = sugerencia.Estado == 1 ? "No validada" : "Validada";
 }
 
-<section class="jumbotron container-fluid">
+<section  id="seccionlogin" class="jumbotron container-fluid">
     <div class="form-group row">
         <label class="col-sm-4 col-form-label" for="Id">ID</label>
         <div class="col">
