--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,24 +29,24 @@ a {
 -------------------------------------------------- */
 
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
+    #seccionlogin {
+        min-height: 900px;
+    }
     html {
         font-size: 16px;
      }
-    .containerlogin {
-        max-width: 1140px;
-        max-height: 700px;
-    }
+   
+   
     
 }
-@media (min-width: 1024px) {
-    html {
-        font-size: 16px;
+@media (max-width:1280px){
+    #seccionlogin{
+        height:640px;
+
     }
-    .containerlogin {
-        max-width: 1140px;
-        max-height: 700px;
-    }
+}
+   
 }
 
 .border-top {
@@ -107,8 +107,6 @@ button.accept-policy {
     height:auto;
 }
 .containerlogin {
-    width: 100%;
-    height:100%;
     padding-right: .75rem;
     padding-left: .75rem;
     margin-right: auto;
