--- a/Views/Urgencias/Nuevo.cshtml
+++ b/Views/Urgencias/Nuevo.cshtml
@@ -9,100 +9,171 @@
     List<AreaModel> areas = ViewBag.areas;
 }
 @model UrgenciaModel
-<section  id="seccionlogin">
-    @using (Html.BeginForm("Create", "Urgencias", FormMethod.Post))
+<link href="https://cdn.jsdelivr.net/npm/smartwizard@5/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
+<section id="seccionlogin" class="jumbotron">
+    <h1 class="display-4">Formulario de solicitud de Urgencia</h1>
+    @using (Html.BeginForm("Create", "Urgencias", FormMethod.Post, new { id = "Formulario" }))
     {
         @Html.AntiForgeryToken()
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Nombre, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Nombre,
-               new { @class = "form-control", placeholder = "Nombre.", autofocus = "autofocus" })
-                @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Ap_paterno, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Ap_paterno,
-               new { @class = "form-control", placeholder = "Apellido paterno.", autofocus = "autofocus" })
-                @Html.ValidationMessageFor(x => x.Ap_paterno, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Ap_materno, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Ap_materno,
-               new { @class = "form-control", placeholder = "Apellido materno.", autofocus = "autofocus" })
-                @Html.ValidationMessageFor(x => x.Ap_materno, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Telefono, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Telefono,
-               new { @class = "form-control", type = "number", placeholder = "0123456789" })
-                @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.TelefonoF, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.TelefonoF,
-               new { @class = "form-control", type = "number", placeholder = "0123456789" })
-                @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Email, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Email,
-               new { @class = "form-control", type = "text", placeholder = "name@example.com" })
-                @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Fecha_nac, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Fecha_nac,
-               new { @class = "form-control", type = "date", min = fechaMin, max = fechaMax, placeholder = "Fecha de nacimiento." })
-                @Html.ValidationMessageFor(x => x.Fecha_nac, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Nss, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Nss,
-               new { @class = "form-control", type = "number", placeholder = "123456789" })
-                @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.IdArea, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                <select id="IdArea" name="IdArea" class="form-control" required>
-                    @foreach(AreaModel area in areas)
-                    {
-                        <option value="@area.Id">@area.Nombre</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Descripcion, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextAreaFor(x => x.Descripcion,
-               new { @class = "form-control", placeholder = "Descripcion-" })
-                @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="row justify-content-md-center">
-            <div class="col col-2">
-                <button class="btn btn-primary btn-lg">Enviar.</button>
-            </div>
-            <div class="col col-2">
-                <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
+        <div id="smartwizard">
+            <ul class="nav">
+                <li>
+                    <a class="nav-link" href="#step-1">
+                        Datos personales
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#step-2">
+                        Informacion de contacto
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#step-3">
+                        Informacion de urgencia
+                    </a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div id="step-1" class="tab-pane" role="tabpanel">
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Nombre, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Nombre,
+                           new { @class = "form-control", placeholder = "Nombre.", autofocus = "autofocus" })
+                            @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Ap_paterno, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Ap_paterno,
+                           new { @class = "form-control", placeholder = "Apellido paterno.", autofocus = "autofocus" })
+                            @Html.ValidationMessageFor(x => x.Ap_paterno, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Ap_materno, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Ap_materno,
+                           new { @class = "form-control", placeholder = "Apellido materno.", autofocus = "autofocus" })
+                            @Html.ValidationMessageFor(x => x.Ap_materno, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Fecha_nac, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Fecha_nac,
+                           new { @class = "form-control", type = "date", min = fechaMin, max = fechaMax, placeholder = "Fecha de nacimiento." })
+                            @Html.ValidationMessageFor(x => x.Fecha_nac, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div id="step-2" class="tab-pane" role="tabpanel">
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Telefono, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Telefono,
+                           new { @class = "form-control", type = "number", placeholder = "0123456789" })
+                            @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.TelefonoF, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.TelefonoF,
+                           new { @class = "form-control", type = "number", placeholder = "0123456789" })
+                            @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Email, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Email,
+                           new { @class = "form-control", type = "text", placeholder = "name@example.com" })
+                            @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div id="step-3" class="tab-pane" role="tabpanel">
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Nss, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextBoxFor(x => x.Nss,
+                           new { @class = "form-control", type = "number", placeholder = "123456789" })
+                            @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.IdArea, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            <select id="IdArea" name="IdArea" class="form-control" required>
+                                @foreach (AreaModel area in areas)
+                                {
+                                    <option value="@area.Id">@area.Nombre</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.LabelFor(x => x.Descripcion, new { @class = "col-sm-4 col-form-label" })
+                        <div class="col">
+                            @Html.TextAreaFor(x => x.Descripcion,
+                           new { @class = "form-control", placeholder = "Descripcion-" })
+                            @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     }
 </section>
+@section scripts{
+    <script src="https://cdn.jsdelivr.net/npm/smartwizard@5/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            var btnCancel = $('<button></button>').text('Cancelar')
+                .addClass('btn btn-danger')
+                .on('click', function () {
+                    document.getElementById("Formulario").reset();
+                    $('#smartwizard').smartWizard("reset");
+                });
+            var btnFinish = $('<button id="Enviar"></button>').text('Enviar')
+                .addClass('btn btn-info disabled')
+                .attr("disabled", true)
+                .on('click', function () { document.getElementById("Formulario").submit(); });
+
+            $("#smartwizard").on("showStep", function (e, anchorObject, stepNumber, stepDirection, stepPosition) {
+                if (stepPosition === 'last') {
+                    $('#Enviar').attr("disabled", false);
+                    $("#Enviar").removeClass('disabled');
+                } else {
+                    $('#Enviar').attr("disabled", true);
+                    $("#Enviar").addClass('disabled');
+                }
+            });
+
+            $('#smartwizard').smartWizard({
+                selected: 0,
+                justified: true,
+                backButtonSupport: true,
+                theme: 'dots',
+                toolbarSettings: {
+                    toolbarPosition: 'bottom',
+                    toolbarButtonPosition: 'right',
+                    showNextButton: true,
+                    showPreviousButton: true,
+                    toolbarExtraButtons: [btnCancel, btnFinish]
+                },
+                transition: {
+                    animation: 'fade', // Effect on navigation, none/fade/slide-horizontal/slide-vertical/slide-swing
+                    speed: '400',
+                    easing: ''
+                },
+                lang: {
+                    next: 'Siguiente',
+                    previous: 'Anterior'
+                },
+            });
+        });
+    </script>
+}
