--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,8 +1,16 @@
-﻿@{
+﻿    @{
     ViewData["Title"] = "Error";
     string error = ViewBag.error;
 }
 <div id="seccionlogin">
-    <h1 class="text-danger">Error.</h1>
-    <h2 class="text-danger">An error occurred while processing your request.</h2>
+    <section class="error-container">
+        <h1 id="h1error" align="center">ERROR</h1>
+        <span class="four"><span class="screen-reader-text">4</span></span>
+        <span class="zero"><span class="screen-reader-text">0</span></span>
+        <span class="four"><span class="screen-reader-text">4</span></span>
+    </section>
+    <h2 id="h2error">Tu petición no se puede procesar</h2>
+    <div class="link-container">
+        <a href="https://localhost:44381/" class="more-link">Volver al Inicio</a>
+    </div>
 </div>
