--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
                 <div class="textositio">
-                    <h1>Bienvenido a nuestro modulo de Quejas y Urgencias</h1><span class="subheading">Por favor espere</span>
+                    <h1>Bienvenido a nuestro modulo de Quejas y Urgencias</h1>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
                         <h2 class="h5 card-title">Quejas</h2>
                         <section>
                             <p class="card-text">Lo mas importante es saber tu opinión sobre nosotros y saber como poderlo mejorar.</p>
-                            <a href="#" class="btn btn-primary">Cuentanoslo</a>
+                            <a href="#" class="btn btn-primary">Háznoslo saber</a>
                         </section>
                     </div>
                 </div>
