--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                         <h2 class="h5 card-title">Quejas</h2>
                         <section>
                             <p class="card-text">Lo mas importante es saber tu opinión sobre nosotros y saber como poderlo mejorar.</p>
-                            <a href="#" class="btn btn-primary">Háznoslo saber</a>
+                            <a asp-controller="QuejaSugerencia" asp-action="Menu" class="btn btn-primary">Háznoslo saber</a>
                         </section>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                         <h3 class="h5 card-title">Urgencias</h3>
                         <section>
                             <p class="card-text">No hagas filas para tu registro, en cuestion de minutos entra a nuestra lista de urgencias desde nuestro modulo.</p>
-                            <a href="#" class="btn btn-primary">Urgencias</a>
+                            <a asp-controller="Urgencias" asp-action="Index" class="btn btn-primary">Urgencias</a>
                         </section>
                     </div>
                 </div>
