--- a/Views/Urgencias/Editar.cshtml
+++ b/Views/Urgencias/Editar.cshtml
@@ -12,14 +12,14 @@
 }
 @model UrgenciaModel
 
-<section  id="seccionlogin">
+<section id="seccionlogin">
     @using (Html.BeginForm("Update", "Urgencias", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
         <div class="form-group row">
             @Html.LabelFor(u => u.Id, new { @class = "col-sm-4 col-form-label" })
             <div class="col">
-                <input readonly name="Id" value="@u.Id" class="form-control"/>
+                <input readonly name="Id" value="@u.Id" class="form-control" />
             </div>
         </div>
         <div class="form-group row">
@@ -61,7 +61,13 @@
         <div class="form-group row">
             @Html.LabelFor(u => u.Fecha_nac, new { @class = "col-sm-4 col-form-label" })
             <div class="col">
-                <input readonly name="Fecha_nac" value="@u.Fecha_nac.ToString("yyyy-MM-dd")" class="form-control" type="date" min="@fechaMin" max="@fechaMax" />
+                <input readonly name="Fecha_nac" value="@u.Fecha_nac.ToString("yyyy-MM-dd")" class="form-control" type="date" />
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.LabelFor(u => u.FechaCita, new { @class = "col-sm-4 col-form-label" })
+            <div class="col">
+                <input name="FechaCita" value="@u.FechaCita.ToString("yyyy-MM-dd")" class="form-control" type="date" min="@fechaMin" max="@fechaMax" />
             </div>
         </div>
         <div class="form-group row">
