--- a/Views/Urgencias/VerCitaPaciente.cshtml
+++ b/Views/Urgencias/VerCitaPaciente.cshtml
@@ -4,15 +4,18 @@
 @{
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     UrgenciaModel urgencia = ViewBag.urgencia;
+    string estado=urgencia.Atendido==1?"Atendido":"En revision";
 }
     <section  id="seccionlogin" class="jumbotron justify-content-md-end">
         <table class="table table-responsive-lg jumbotron-fluid">
             <thead>
                 <tr>
+                    <td scope="col">N Urgencia</td>
                     <td scope="col">Nombre</td>
                     <td scope="col">Telefono</td>
                     <td scope="col">Fecha consulta</td>
                     <td scope="col">NSS</td>
+                    <td scope="col">Estado</td>
 
                 </tr>
             </thead>
@@ -21,13 +24,13 @@
                 {
 
                     <tr>
+                        <td>@urgencia.Id</td>
                         <td>@urgencia.Nombre @urgencia.Ap_paterno @urgencia.Ap_materno</td>
                         <td>@urgencia.Telefono</td>
                         <td>@urgencia.Fecha_nac.ToShortDateString()</td>
                         <td>@urgencia.Nss</td>
-
+                        <td>@estado</td>
                     </tr>
-
                 }
             </tbody>
         </table>
