--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -61,7 +61,7 @@
             <!-- Copyright -->
             <div class="footer-copyright text-center text-white py-3">
                 © 2020 Copyright:
-                <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
+                <a class="text-white" target="_blank" rel="noreferrer" href="https://obedmartinezg.tech/">Obed Martinez</a> & Frobacksolutions
             </div>
             <!-- Copyright -->
         </div>
