--- a/Views/Shared/More_Layout/_WithoutC.cshtml
+++ b/Views/Shared/More_Layout/_WithoutC.cshtml
@@ -70,7 +70,7 @@
 
         <div class="footer-copyright text-center text-white py-3">
             © 2020 Copyright:
-            <a class="text-white" target="_blank" href="https://FrobackSolutions.com/" rel="noreferrer"> Frobacksolutions.com</a>
+            <a class="text-white" target="_blank" rel="noreferrer" href="https://obedmartinezg.tech/">Obed Martinez</a> & Frobacksolutions
         </div>
         <!-- Copyright -->
             </div>
