--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,17 +41,17 @@
             </div>
         </nav>
     </header>
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
 
-    
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
 
     <!-- Footer -->
-   
+
 
     <footer id="footer" class="page-footer font-small bg-secondary pt-4">
         <div class="container text-center text-md-left">
@@ -75,7 +75,7 @@
             <!-- Copyright -->
             <div class="footer-copyright text-center text-white py-3">
                 © 2020 Copyright:
-                <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
+                <a class="text-white" target="_blank" rel="noreferrer" href="https://obedmartinezg.tech/">Obed Martinez</a> & Frobacksolutions
             </div>
             <!-- Copyright -->
         </div>
