--- a/Views/Admin/Pacientes.cshtml
+++ b/Views/Admin/Pacientes.cshtml
@@ -28,6 +28,9 @@
                             <a target="_blank" asp-route-id="@estancia.id" asp-controller="Admin" asp-action="Observaciones" type="button" class="btn btn-secondary" aria-label="Ver">
                                 <i class="fas fa-eye"></i>
                             </a>
+                            <a target="_blank" asp-route-id="@estancia.id" asp-controller="Admin" asp-action="Operaciones" type="button" class="btn btn-secondary" aria-label="VerOperaciones">
+                                <i class="fas fa-eye"></i>
+                            </a>
                         </td>
                     </tr>
                 }
