--- a/Views/Operacion/Index.cshtml
+++ b/Views/Operacion/Index.cshtml
@@ -7,7 +7,7 @@
     <button class="btn btn-info" type="button" data-toggle="modal" data-target="#nuevaO">Nueva observacion</button>
     <h1>Paciente @estancia.paciente.urgencia.Nombre @estancia.paciente.urgencia.Ap_paterno</h1>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-    <table class="table table-bordered" id="operaciones">
+    <table class="table-light table-bordered table-striped table-hover" style="width:100%" id="operaciones">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
