--- a/Views/Admin/Pacientes.cshtml
+++ b/Views/Admin/Pacientes.cshtml
@@ -2,9 +2,10 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     List<EstanciaModel> estancias = ViewBag.estancias;
 }
-<section id="seccionlogin">
+<section id="seccionlogin" style="padding-right: 20px;
+        padding-left: 20px;">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-    <table class="table table-bordered" id="pacientes">
+    <table class="table-light table-bordered table-striped table-hover" style="width:100%" id="pacientes">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
@@ -43,7 +44,7 @@
     <script>
         $(document).ready(function () {
             $('#pacientes').DataTable({
-                language: {
+                    language: {
                     "emptyTable": "No hay registros que atender",
                     "search": "Buscar:",
                     "info": "Mostrando _START_ a _END_ de _TOTAL_ registros",
