--- a/Views/Admin/Quejas.cshtml
+++ b/Views/Admin/Quejas.cshtml
@@ -2,9 +2,10 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     List<QuejaModel> quejas = ViewBag.quejas;
 }
-<section  id="seccionlogin">
+<section  id="seccionlogin" style="padding-right: 20px;
+        padding-left: 20px;">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-<table class="table table-bordered" id="Quejas">
+<table class="table-light table-bordered table-striped table-hover" style="width:100%" id="Quejas">
     <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
@@ -54,6 +55,7 @@
     <script>
         $(document).ready(function () {
             $('#Quejas').DataTable({
+                responsive:true,
                 language: {
                     "emptyTable": "No hay registros que atender",
                     "search": "Buscar:",
