--- a/Views/Admin/Sugerencias.cshtml
+++ b/Views/Admin/Sugerencias.cshtml
@@ -2,9 +2,10 @@
     List<SugerenciaModel> sugerencias = ViewBag.sugerencias;
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
 }
-<section  id="seccionlogin">
+<section  id="seccionlogin" style="padding-right: 20px;
+        padding-left: 20px;">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-<table class="table table-bordered" id="Sugerencias">
+<table class="table-light table-bordered table-striped table-hover" style="width:95%" id="Sugerencias">
     <thead class="thead-dark">
         <tr>
             <th scope="col">ID</th>
@@ -50,6 +51,7 @@
     <script>
         $(document).ready(function () {
             $('#Sugerencias').DataTable({
+                responsive: true,
                 language: {
                     "emptyTable": "No hay registros que atender",
                     "search": "Buscar:",
