--- a/Views/Observacion/index.cshtml
+++ b/Views/Observacion/index.cshtml
@@ -7,8 +7,8 @@
     <button class="btn btn-info" type="button" data-toggle="modal" data-target="#nuevaO">Nueva observacion</button>
     <h1>Paciente @estancia.paciente.urgencia.Nombre @estancia.paciente.urgencia.Ap_paterno</h1>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-    <table class="table table-bordered" id="observaciones">
-        <thead class="thead-dark">
+    <table class="table-light table-bordered table-striped table-hover" style="width:100%" id="observaciones">
+        <thead class="thead">
             <tr>
                 <th scope="col">ID</th>
                 <th scope="col">Observaciones</th>
