--- a/Views/Admin/Quejas.cshtml
+++ b/Views/Admin/Quejas.cshtml
@@ -29,7 +29,7 @@
                     <td>
                         @if (queja.Descripcion.Length >= 50)
                         {
-                            @for (int i = 0; i <= 50; i++)
+                            @for (int i = 0; i < 50; i++)
                             {
                                 @queja.Descripcion[i]
                             }
