--- a/Views/QuejaSugerencia/Usuario/VerQueja.cshtml
+++ b/Views/QuejaSugerencia/Usuario/VerQueja.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    QuejaModel queja = ViewBag.queja;
+    QuejaModelE queja = ViewBag.queja;
     ViewData["Title"] = "Ver Sugerencia";
     Layout = "~/Views/Shared/_Layout.cshtml";
     string estado = queja.Estado == 1 ? "No validada" : "Validada";
@@ -38,4 +38,13 @@
             <input readonly id="Estado" class="form-control" value="@estado" />
         </div>
     </div>
+    @if (queja.solucion != null)
+    {
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" for="Estado">Solucion a la queja</label>
+            <div class="col">
+                <textarea readonly id="Estado" class="form-control">@queja.solucion.solucion</textarea>
+            </div>
+        </div>
+    }
 </section>
